--- a/TS.EasyStockManager.Web/Views/Transaction/Index.cshtml
+++ b/TS.EasyStockManager.Web/Views/Transaction/Index.cshtml
@@ -59,7 +59,7 @@
                             <div class="col-md-12 text-right">
                                 <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Clear</button>
                                 <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Filter</button>
-                                <a class="btn btn-sm btn-info" href="/Transaction/Create?typeId=1"><i class="fas fa-plus"></i> Stock In</a>
+                                <a class="btn btn-sm btn-info" href="/Transaction/Create?typeId=1"><i class="fas fa-plus"></i> Stock Receipt</a>
                                 <a class="btn btn-sm btn-info" href="/Transaction/Create?typeId=2"><i class="fas fa-plus"></i> Stock Out</a>
                                 <a class="btn btn-sm btn-info" href="/Transaction/Create?typeId=3"><i class="fas fa-plus"></i> Transfer</a>
                             </div>
