--- a/TS.EasyStockManager.Web/Views/Auth/Login.cshtml
+++ b/TS.EasyStockManager.Web/Views/Auth/Login.cshtml
@@ -17,7 +17,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <b>TS</b> Easy Stock Manager
+            <b>TS</b> Easy Stock Management
         </div>
         <div class="card">
             <div class="card-body login-card-body">
