--- a/TS.EasyStockManager.Web/Views/Auth/Login.cshtml
+++ b/TS.EasyStockManager.Web/Views/Auth/Login.cshtml
@@ -17,7 +17,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <b>TS</b> Easy Stock Management
+            <b>YADEM</b> Sapanca Su Arıtma Muhasebe - Stok Takip Sistemi
         </div>
         <div class="card">
             <div class="card-body login-card-body">
@@ -35,7 +35,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block">Giriş Yap</button>
                         </div>
                     </div>
                 </form>
