--- a/TS.EasyStockManager.Web/Views/Category/Create.cshtml
+++ b/TS.EasyStockManager.Web/Views/Category/Create.cshtml
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Create Category</h3>
+                        <h3 class="card-title">Kategori Oluşturma</h3>
                     </div>
                     <form asp-action="Create" asp-antiforgery="true" id="frmCreate">
                         <div class="card-body">
@@ -22,8 +22,8 @@
                             </div>
                         </div>
                         <div class="card-footer text-right">
-                            <a class="btn btn-default" href="/Category">Back</a>
-                            <button id="btnSave" type="submit" class="btn btn-primary">Save</button>
+                            <a class="btn btn-default" href="/Category">Geri</a>
+                            <button id="btnSave" type="submit" class="btn btn-primary">Kaydet</button>
                         </div>
                     </form>
                 </div>
