--- a/TS.EasyStockManager.Web/Views/Category/Index.cshtml
+++ b/TS.EasyStockManager.Web/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TS.EasyStockManager.Model.ViewModel.Category.SearchCategoryViewModel
 @{
-    ViewData["Title"] = "Category List";
+    ViewData["Title"] = "Kategori Listesi";
 }
 
 <section class="content pt-2">
@@ -9,7 +9,7 @@
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">Category Filter</h3>
+                        <h3 class="card-title">Kategori Arama</h3>
                     </div>
                     <div class="card-body dataTable-search-form">
                         <div class="row">
@@ -22,9 +22,9 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 text-right">
-                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Clear</button>
-                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Filter</button>
-                                <a class="btn btn-info btn-sm" href="/Category/Create"><i class="fas fa-plus"></i> Create Category</a>
+                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Temize</button>
+                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Ara</button>
+                                <a class="btn btn-info btn-sm" href="/Category/Create"><i class="fas fa-plus"></i> Yeni Kategori Oluştur</a>
                             </div>
                         </div>
                     </div>
@@ -36,22 +36,22 @@
             <div class="col-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">Category List</h3>
+                        <h3 class="card-title">Kategori Listesi</h3>
                     </div>
                     <div class="card-body">
                         <table id="datatable" class="table table-bordered table-hover dt-responsive nowrap w-100">
                             <thead>
                                 <tr>
-                                    <th>Category Name</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Kategori İsmi</th>
+                                    <th style="width:15%">İşlemler</th>
                                 </tr>
                             </thead>
                             <tbody>
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <th>Category Name</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Kategori İsmi</th>
+                                    <th style="width:15%">İşlemler</th>
                                 </tr>
                             </tfoot>
                         </table>
