--- a/TS.EasyStockManager.Web/Views/Product/Index.cshtml
+++ b/TS.EasyStockManager.Web/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">User Filter</h3>
+                        <h3 class="card-title">Ürün Arama</h3>
                     </div>
                     <div class="card-body dataTable-search-form">
                         <div class="row">
@@ -44,9 +44,9 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 text-right">
-                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Clear</button>
-                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Filter</button>
-                                <a class="btn btn-info btn-sm" href="/Product/Create"><i class="fas fa-plus"></i> Create Product</a>
+                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Temizle</button>
+                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Ara</button>
+                                <a class="btn btn-info btn-sm" href="/Product/Create"><i class="fas fa-plus"></i> Ürün Oluştur</a>
                             </div>
                         </div>
                     </div>
@@ -58,32 +58,32 @@
             <div class="col-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">User List</h3>
+                        <h3 class="card-title">Ürün Listesi</h3>
                     </div>
                     <div class="card-body">
                         <table id="datatable" class="table table-bordered table-hover dt-responsive nowrap w-100">
                             <thead>
                                 <tr>
-                                    <th>Image</th>
-                                    <th>Product Name</th>
+                                    <th>Resim</th>
+                                    <th>Ürün İsmi</th>
                                     <th>Barcode</th>
-                                    <th>Price</th>
-                                    <th>Category</th>
-                                    <th>Unit Of Measure</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Fiyat</th>
+                                    <th>Kategori</th>
+                                    <th>Ölçü</th>
+                                    <th style="width:15%">Olaylar</th>
                                 </tr>
                             </thead>
                             <tbody>
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <th>Image</th>
-                                    <th>Product Name</th>
+                                    <th>Resim</th>
+                                    <th>Ürün İsmi</th>
                                     <th>Barcode</th>
-                                    <th>Price</th>
-                                    <th>Category</th>
-                                    <th>Unit Of Measure</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Fiyat</th>
+                                    <th>Kategori</th>
+                                    <th>Ölçü</th>
+                                    <th style="width:15%">Olaylar</th>
                                 </tr>
                             </tfoot>
                         </table>
