--- a/TS.EasyStockManager.Web/Views/Shared/_SidebarPartial.cshtml
+++ b/TS.EasyStockManager.Web/Views/Shared/_SidebarPartial.cshtml
@@ -22,12 +22,12 @@
             </a>
         </li>
 
-        <li class="nav-header">Definitions</li>
+        <li class="nav-header">Tanımlamalar</li>
         <li class="nav-item">
             <a href="/Category" class="nav-link">
                 <i class="nav-icon fas fa-folder"></i>
                 <p>
-                    Category
+                    Kateogri
                 </p>
             </a>
         </li>
@@ -35,7 +35,7 @@
             <a href="/UnitOfMeasure" class="nav-link">
                 <i class="nav-icon fas fa-box-open"></i>
                 <p>
-                    Units
+                    Ölçüler
                 </p>
             </a>
         </li>
@@ -43,7 +43,7 @@
             <a href="/Product" class="nav-link">
                 <i class="nav-icon fas fa-barcode"></i>
                 <p>
-                    Product
+                    Ürünler
                 </p>
             </a>
         </li>
@@ -51,7 +51,7 @@
             <a href="/Store" class="nav-link">
                 <i class="nav-icon fas fa-building"></i>
                 <p>
-                    Store
+                    Mağazalar
                 </p>
             </a>
         </li>
@@ -59,7 +59,7 @@
             <a href="/User" class="nav-link">
                 <i class="nav-icon fas fa-user"></i>
                 <p>
-                    User
+                    Kullanıcı
                 </p>
             </a>
         </li>
@@ -68,7 +68,7 @@
             <a href="/Auth/Logout" class="nav-link">
                 <i class="nav-icon fas fa-sign-out-alt"></i>
                 <p>
-                    Logout
+                    Çıkış Yap
                 </p>
             </a>
         </li>
