--- a/TS.EasyStockManager.Web/Views/Store/Edit.cshtml
+++ b/TS.EasyStockManager.Web/Views/Store/Edit.cshtml
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Edit Store</h3>
+                        <h3 class="card-title">Mağaza Düzenle</h3>
                     </div>
                     <form asp-action="Edit" asp-antiforgery="true" id="frmCreate">
                         <div class="card-body">
@@ -27,8 +27,8 @@
                             </div>
                         </div>
                         <div class="card-footer text-right">
-                            <a class="btn btn-default" href="/Store">Back</a>
-                            <button id="btnSave" type="submit" class="btn btn-primary">Update</button>
+                            <a class="btn btn-default" href="/Store">Geri</a>
+                            <button id="btnSave" type="submit" class="btn btn-primary">Güncelle</button>
                         </div>
                     </form>
                 </div>
