--- a/TS.EasyStockManager.Web/Views/Store/Index.cshtml
+++ b/TS.EasyStockManager.Web/Views/Store/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TS.EasyStockManager.Model.ViewModel.Store.SearchStoreViewModel
 @{
-    ViewData["Title"] = "Store List";
+    ViewData["Title"] = "Mağaza Listesi";
 }
 
 <section class="content pt-2">
@@ -9,7 +9,7 @@
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">Store Filter</h3>
+                        <h3 class="card-title">Mağaza Ara</h3>
                     </div>
                     <div class="card-body dataTable-search-form">
                         <div class="row">
@@ -28,9 +28,9 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 text-right">
-                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Clear</button>
-                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Filter</button>
-                                <a class="btn btn-info btn-sm" href="/Store/Create"><i class="fas fa-plus"></i> Create Store</a>
+                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Temizle</button>
+                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Ara</button>
+                                <a class="btn btn-info btn-sm" href="/Store/Create"><i class="fas fa-plus"></i> Mağaza Oluştur</a>
                             </div>
                         </div>
                     </div>
@@ -42,24 +42,24 @@
             <div class="col-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">Store List</h3>
+                        <h3 class="card-title">Mağaza Listesi</h3>
                     </div>
                     <div class="card-body">
                         <table id="datatable" class="table table-bordered table-hover dt-responsive nowrap w-100">
                             <thead>
                                 <tr>
-                                    <th>Store Name</th>
-                                    <th>Store Code</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Mağaza Adı</th>
+                                    <th>Mağaza Kodu</th>
+                                    <th style="width:15%">İşlemler</th>
                                 </tr>
                             </thead>
                             <tbody>
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <th>Store Name</th>
-                                    <th>Store Code</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Mağaza Adı</th>
+                                    <th>Mağaza Kodu</th>
+                                    <th style="width:15%">İşlemler</th>
                                 </tr>
                             </tfoot>
                         </table>
