--- a/TS.EasyStockManager.Web/Views/UnitOfMeasure/Create.cshtml
+++ b/TS.EasyStockManager.Web/Views/UnitOfMeasure/Create.cshtml
@@ -11,7 +11,7 @@
             <div class="col-md-6">
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Create Unit Of Measure</h3>
+                        <h3 class="card-title">Ölçü Oluştur</h3>
                     </div>
                     <form asp-action="Create" asp-antiforgery="true" id="frmCreate">
                         <div class="card-body">
