--- a/TS.EasyStockManager.Web/Views/UnitOfMeasure/Index.cshtml
+++ b/TS.EasyStockManager.Web/Views/UnitOfMeasure/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="col-md-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">Unit Of Measure Filter</h3>
+                        <h3 class="card-title">Ölçü Ara</h3>
                     </div>
                     <div class="card-body dataTable-search-form">
                         <div class="row">
@@ -28,9 +28,9 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12 text-right">
-                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Clear</button>
-                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Filter</button>
-                                <a class="btn btn-info btn-sm" href="/UnitOfMeasure/Create"><i class="fas fa-plus"></i> Create Unit Of Measure</a>
+                                <button id="btnClear" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-sync-alt"></i> Temize</button>
+                                <button id="btnFilter" type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i> Ara</button>
+                                <a class="btn btn-info btn-sm" href="/UnitOfMeasure/Create"><i class="fas fa-plus"></i> Ölçü Oluştur</a>
                             </div>
                         </div>
                     </div>
@@ -42,24 +42,24 @@
             <div class="col-12">
                 <div class="card card-secondary">
                     <div class="card-header">
-                        <h3 class="card-title">Unit Of Measure List</h3>
+                        <h3 class="card-title">Ölçü Listesi</h3>
                     </div>
                     <div class="card-body">
                         <table id="datatable" class="table table-bordered table-hover dt-responsive nowrap w-100">
                             <thead>
                                 <tr>
-                                    <th>Unit of Measure Name</th>
-                                    <th>Unit of Measure Short Code</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Ölçü İsmi</th>
+                                    <th>Ölçü Kodu</th>
+                                    <th style="width:15%">İşlemler</th>
                                 </tr>
                             </thead>
                             <tbody>
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <th>Unit of Measure Name</th>
-                                    <th>Unit of Measure Short Code</th>
-                                    <th style="width:15%">Actions</th>
+                                    <th>Ölçü İsmi</th>
+                                    <th>Ölçü Kodu</th>
+                                    <th style="width:15%">İşlemler</th>
                                 </tr>
                             </tfoot>
                         </table>
