--- a/TS.EasyStockManager.Web/Views/Home/Index.cshtml
+++ b/TS.EasyStockManager.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container-fluid ">
         <div class="row ">
             <div class="col-md-12">
-                <h2>Welcome TS Easy Stock Manager</h2>
+                <h2>Esnaf Yönetim Paneline Hoş Geldiniz</h2>
             </div>
         </div>
     </div>
