--- a/TS.EasyStockManager.Web/Views/UnitOfMeasure/Edit.cshtml
+++ b/TS.EasyStockManager.Web/Views/UnitOfMeasure/Edit.cshtml
@@ -12,7 +12,7 @@
             <div class="col-md-6">
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Edit Unit Of Measure</h3>
+                        <h3 class="card-title">Ölçü Birimi Düzenle</h3>
                     </div>
                     <form asp-action="Edit" asp-antiforgery="true" id="frmCreate">
                         <div class="card-body">
@@ -28,8 +28,8 @@
                             </div>
                         </div>
                         <div class="card-footer text-right">
-                            <a class="btn btn-default" href="/UnitOfMeasure">Back</a>
-                            <button id="btnSave" type="submit" class="btn btn-primary">Update</button>
+                            <a class="btn btn-default" href="/UnitOfMeasure">Geri</a>
+                            <button id="btnSave" type="submit" class="btn btn-primary">Güncelle</button>
                         </div>
                     </form>
                 </div>
